NEW | Dashboard - Sidebar - Utils

--- a/Front-End/src/pages/index.astro
+++ b/Front-End/src/pages/index.astro
@@ -5,4 +5,5 @@ import Layout from '../layouts/Layout.astro';
 <Layout title='Home'>
 	<a href="/sign-in" class="text-pink-500 m-5">Create account</a>
 	<a href="/404" class="text-pink-500 m-5">Error Page 404</a>
+	<a href="/Dashboard" class="text-pink-500 m-5">Dashboard</a>
 </Layout>
